    tamagushi, black smiley, white smiley, and lightening bolt).
    Just use the same letter abbrevs used in non-utf mode.
    Closes: #285350

  [ Colin Watson ]
  * Stop USES_EXTENDED command from segfaulting if called on a device
    without a partition table (e.g. a DVD-RW).
  * Use 'rm -f' rather than more awkward test-then-remove constructions.

 -- Colin Watson <cjwatson@debian.org>  Sun,  2 Oct 2005 20:35:21 +0100

partman-base (72) unstable; urgency=low

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Galician (gl.po) by Jacobo Tarrio
  * Kurdish (ku.po) by Erdal Ronahi
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Polish (pl.po) by Bartosz Fenski
  * Romanian (ro.po) by Eddy Petrisor
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Peter Mann
  * Tagalog (tl.po) by Eric Pareja
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
  * Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:51:10 +0200

partman-base (71) unstable; urgency=low

  [ Joey Hess ]
  * All ads* subarches collapsed into one.
  
  [ Otavio Salvador ]
  * Enforce the use of new parted version 1.6.24 since it has a soname
    change.

 -- Otavio Salvador <otavio@debian.org>  Mon, 22 Aug 2005 11:09:58 -0300

partman-base (70) unstable; urgency=low

  * All ADS arm boards use msdos partition tables by default.

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 09:53:09 -0400

partman-base (69) unstable; urgency=low

  [ Frans Pop ]
  * Apply patch from Max Vozeler adding loop device support
    (closes: #320443).

  [ Colin Watson ]
  * Rename to partman-base, to free up the name 'partman' for use by a .deb
    in the future. Provides: partman for now.
  * Add myself to Uploaders.

 -- Colin Watson <cjwatson@debian.org>  Wed, 10 Aug 2005 15:16:15 +0100

partman (68) unstable; urgency=low

  [ Fabio M. Di Nitto ]
  * If using udev, ensure that its queue is flushed before attempting any