@@ -2,9 +2,4 @@
 
 . /lib/partman/definitions.sh
 
-open_infifo
-write_line "QUIT"
-close_infifo
-
-rm /var/run/parted_server.pid
-
+stop_parted_server
