@@ -4,10 +4,7 @@
 
 abort () {
     if [ -f /var/run/parted_server.pid ]; then
-	open_infifo
-	write_line "QUIT"
-	close_infifo
-	rm /var/run/parted_server.pid
+	stop_parted_server
     fi
     exit $1
 }
