@@ -10,6 +10,8 @@ partman-base (73) UNRELEASED; urgency=low
   * Stop USES_EXTENDED command from segfaulting if called on a device
     without a partition table (e.g. a DVD-RW).
   * Use 'rm -f' rather than more awkward test-then-remove constructions.
+  * Add stop_parted_server and restart_partman functions to reduce
+    duplication elsewhere.
 
  -- Colin Watson <cjwatson@debian.org>  Sun,  2 Oct 2005 20:35:21 +0100
 
